--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+html body {
+    background-color: black;
+    font-family: 'Amiri', serif;
+    font-size: x-large;
+    color: gray;
+}
+select {
+    text-decoration: white;
+    background-color: black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.world{
+    margin-top: 2em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.country {
+    margin-top: 1em;
+    height: 3em;
+    border: 1px solid gray;
+}
+.land{
+    margin-top: 0.7em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.deaths {
+    color: darkred;
 }
 
-.App-link {
-  color: #61dafb;
+.recovered{
+    color: darkgreen;
+}
+.graph{
+    margin-top: 1em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.frm{
+    margin-top: 1em;
 }
+input {
+    background-color: black;
+    border-color: gray;
+    color: gray;
+}
+button {
+    background-color: black;
+    border-color: gray;
+    color: gray;
+}
+
+.marker-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.marker-btn img {
+    width: 20px;
+    height: 20px;
+}
+
+
+
+
