--- a/src/App.css
+++ b/src/App.css
@@ -12,14 +12,19 @@ select {
 .world{
     margin-top: 2em;
 }
-
+@media (max-width: 500px) {
+    .graph img {
+        display: none;
+    }
+}
+@media (max-width: 500px) {
+    .imgCountry img {
+        display: none;
+    }
+}
 .country {
     margin-top: 1em;
-    height: 3em;
     border: 1px solid gray;
-}
-.land{
-    margin-top: 0.7em;
 }
 
 .deaths {
@@ -58,6 +63,16 @@ button {
     height: 20px;
 }
 
+
+.countDrop{
+    border-bottom: 1px solid gray;;
+}
+
+.loader{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
 
 
 
